Bug 1829487 - Block shader optimization feature on Windows + SandyBridge r=gfx-reviewers,jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D177358